Many AI code reviews. Fix issue #676 JJazzLab 5.1 complete freeze